test(bindings): update java ffm usage and fix node header resolution
Update Java smoke test to use explicit UTF-8 memory allocation and
string retrieval for compatibility with modern FFM APIs. Refactor the
Node-API build script to install headers into a local temporary
directory instead of globally, preventing permission errors in
restricted environments.